--- a/src/components/LibroEstadosFinancieros.css
+++ b/src/components/LibroEstadosFinancieros.css
@@ -19,7 +19,7 @@
 }
 
 .estado-financiero th, .estado-financiero td {
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     padding: 10px;
     text-align: left;
 }
@@ -30,11 +30,11 @@
 
 .estado-financiero td input {
     width: 100%;
-    padding: 5px;
+    padding: 1px;
     box-sizing: border-box;
     border: none;
     outline: none;
-    text-align: right;
+    text-align: left;
 }
 
 .estado-financiero h2, .estado-financiero h3 {
