--- a/src/components/CapitalLibro.css
+++ b/src/components/CapitalLibro.css
@@ -1,17 +1,18 @@
-.acta-junta-container {
+/* src/components/CapitalLibro.css */
+.capital-libro-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
 }
 
-.acta-image-container {
+.libro-image-container {
     margin-top: 20px;
     width: 100%;
     text-align: center;
 }
 
-.acta-image {
+.libro-image {
     max-width: 100%;
     height: auto;
     border: 1px solid #ddd;
