--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,72 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+
+
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
+  color: #333;
+}
+
+.MuiContainer-root {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.MuiButton-containedPrimary {
+  background-color: #1976d2;
+}
+
+.MuiButton-containedPrimary:hover {
+  background-color: #1565c0;
+}
+
+.MuiCard-root {
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.MuiCard-root:hover {
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.MuiTypography-h4 {
+  margin-bottom: 1rem;
+}
+
+.MuiBox-root {
+  margin-bottom: 2rem;
+}
+
+.MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.MuiTypography-h6 {
+  margin-top: 0.5rem;
+}
+
+.MuiButton-outlinedPrimary {
+  margin-top: 0.5rem;
+}
+
+.MuiButton-outlinedPrimary:hover {
+  border-color: #1565c0;
+  color: #1565c0;
+}
+
+.MuiTypography-body1 {
+  color: #555;
+}
